[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/Swing/swing.gd" type="Script" id=1]
[ext_resource path="res://assets/swing.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SwingRope:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 2, 3.8 ),
"transitions": PoolRealArray( 1, 0.000198304, 1, 0.000357443 ),
"update": 0,
"values": [ 63.0, -63.0, -63.0, 63.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.60561
height = 12.4118

[node name="swing" type="Node2D"]
position = Vector2( 160, 120 )
rotation = -1.09956
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swing"
anims/swing = SubResource( 1 )

[node name="SwingRope" type="Area2D" parent="."]
rotation = 1.09956

[node name="sprite" type="Sprite" parent="SwingRope"]
rotation = 1.09956
texture = ExtResource( 2 )
offset = Vector2( -2, 30 )

[node name="GrabBar" type="CollisionShape2D" parent="SwingRope"]
position = Vector2( -52.368, 23.877 )
rotation = -0.471237
scale = Vector2( 0.352257, 0.280031 )
shape = SubResource( 2 )
[connection signal="body_entered" from="SwingRope" to="." method="_on_Area2D_body_entered"]
